# OpenGL-Project

Shading/: Shading.sln
Shading/src/: Shading.cpp  Shading.vcxproj  Shading.vcxproj.filters  camera.h  headers.h  light.h  main  shaderprog.cpp  shaderprog.h  sphere.cpp  sphere.h
Shading/src/main.dSYM/Contents/Resources/DWARF/: main
Shading/src/shaders/: fixed_color.fs  fixed_color.vs  gouraud_shading_demo.vs
Shading/src/x64/Debug/: Shading.exe.recipe  Shading.ilk  vc143.idb
Shading/src/x64/Debug/Shading.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Shading.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Shading/src/x64/Release/: Shading.exe.recipe  Shading.iobj  Shading.ipdb
Shading/src/x64/Release/Shading.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Shading.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
competition/: CMakeLists.txt
competition/CG_HW3/: CG_HW3.cpp  assimp_loader.cpp  assimp_loader.h  camera.cpp  camera.h  fbx_loader.cpp  fbx_loader.h  fbx_model_loader.h  gui.cpp  gui.h  headers.h  imagetexture.cpp  imgui.ini  light.h  material.h  scene.h  scene_obj.h  shaderprog.cpp  shaderprog.h  skybox.cpp  trianglemesh.cpp  trianglemesh.h
competition/CG_HW3/shaders/: phong_shading_demo.fs  phong_shading_demo.vs  skybox.fs
firstapp/: SimpleDrawing  SimpleDrawing.cpp  main  main.cpp  practice.cpp
firstapp/SimpleDrawing.dSYM/Contents/: Info.plist
firstapp/SimpleDrawing.dSYM/Contents/Resources/DWARF/: SimpleDrawing
firstapp/SimpleDrawing.dSYM/Contents/Resources/Relocations/aarch64/: SimpleDrawing.yml
firstapp/main.dSYM/Contents/Resources/DWARF/: main
firstapp/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
homework1/: CG_HW1.cpp  TriangleMesh.cpp  TriangleMesh.h  main
homework1/excutable/: main
homework1/excutable/main.dSYM/Contents/Resources/DWARF/: main
homework1/main.dSYM/Contents/Resources/DWARF/: main
homework1/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
homework2/: CG_HW2.sln
homework2/CG_HW2/: CG_HW2.cpp  CG_HW2.vcxproj  CG_HW2.vcxproj.filters  gui.cpp  gui.h  headers.h  imgui.ini  light.h  main  shaderprog.cpp  shaderprog.h  trianglemesh.cpp  trianglemesh.h
homework2/CG_HW2/shaders/: phong_shading_demo.fs  phong_shading_demo.vs
homework2/CG_HW2/x64/Debug/: CG_HW2.exe.recipe  CG_HW2.ilk  vc143.idb
homework2/CG_HW2/x64/Debug/CG_HW2.tlog/: CG_HW2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
homework2/CG_HW2/x64/Release/: CG_HW2.exe.recipe  CG_HW2.iobj  CG_HW2.ipdb
homework2/CG_HW2/x64/Release/CG_HW2.tlog/: CG_HW2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+4 files in other folders)
